# NeuralSteganography

./: .env.example  .gitignore  AGENT.md  AGENTS.md  CODE_REVIEW.md  Makefile  README.md  arithmetic.py  block_baseline.py  main.py  pyproject.toml  pytest.ini  requirements.txt  run_single.py  utils.py
code_base/: arithmetic.py  huffman.py  huffman_baseline.py  utils.py
demo_cli/: cover.txt  secret.txt
neuralstego/: .env.example  .gitignore  AGENT.md  LICENSE  Makefile  README.md  pyproject.toml
neuralstego/.github/workflows/: ci.yml
neuralstego/scripts/: doctor.sh  download_models.py  setup_env.sh  smoke_test_cli.sh
neuralstego/src/neuralstego/: __init__.py  __main__.py  cli.py
neuralstego/src/neuralstego/core/: __init__.py
neuralstego/tests/: test_smoke.py
scripts/: audit_many.sh  codec_roundtrip.sh  cover_roundtrip.sh  cover_smoke.sh  crypto_roundtrip.sh  demo_pipeline.py  doctor.sh  download_models.py  ecc_fault_injection.sh  gpt2fa_roundtrip.sh  quality_smoke.sh  run_gradio.sh  setup_env.sh  smoke_test_cli.sh  ui_smoke.sh
src/neuralstego/: __init__.py  __main__.py  api.py  cli.py  exceptions.py
src/neuralstego/app/: __init__.py  gradio_app.py  ui_presets.py
src/neuralstego/codec/: __init__.py  api.py  arithmetic.py  chunker.py  distribution.py  errors.py  packet.py  quality.py  textio.py  types.py
src/neuralstego/crypto/: __init__.py  aead.py  api.py  arithmetic.py  distribution.py  envelope.py  errors.py  gpt2fa.py  kdf.py  quality.py
src/neuralstego/detect/: __init__.py  classifier.py  features.py  guard.py
src/neuralstego/framing/: __init__.py  chunker.py  crc.py  ecc.py  errors.py  packet.py
src/neuralstego/lm/: __init__.py  arithmetic.py  mock.py  transformers_adapter.py
src/neuralstego/metrics/: __init__.py  entropy.py  lm_scorer.py  text_stats.py
src/neuralstego/utils/: __init__.py  logging.py
tests/: conftest.py
tests/api/: test_cover_api.py
tests/codec/: test_api_integration.py  test_arithmetic_roundtrip.py  test_arithmetic_threshold.py  test_cli_codec_roundtrip.py  test_distribution_mock.py  test_quality_policies.py  test_textio_spans_to_text.py
tests/crypto/: test_aead.py  test_api_gpt2fa.py  test_api_roundtrip.py  test_arithmetic_gpt2fa.py  test_cli_encrypt_decrypt.py  test_cli_gpt2fa.py  test_distribution_transformers.py  test_envelope.py  test_kdf.py  test_quality_gpt2fa.py
tests/detect/: test_features.py  test_guard_rules.py
tests/framing/: test_api_end_to_end.py  test_chunker.py  test_crc.py  test_ecc.py  test_fault_injection.py  test_packet.py
tests/lm/: test_loader.py  test_transformers_adapter.py
tests/metrics/: test_entropy.py  test_lm_scorer.py  test_text_stats.py
tests/quality/: test_cli_cover_walkthrough.py  test_guard_cli.py  test_regen_loop.py
