[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "neuralstego"
version = "0.1.0"
description = "Neural steganography CLI toolkit"
readme = "neuralstego/README.md"
authors = [
  { name = "NeuralSteganography Developers" }
]
license = { text = "MIT" }
requires-python = ">=3.10"
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent"
]
dependencies = [
  "click>=8.1",
  "rich>=13.0",
  "argon2-cffi>=23.1.0",
  "cryptography>=42.0.0",
  "gradio>=4.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "pytest-cov>=4.0",
  "ruff>=0.5",
  "mypy>=1.5",
  "transformers>=4.41.0",
  "cryptography",
  "bitarray",
]

[project.scripts]
neuralstego = "neuralstego.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
